--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p><center>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.</center></p>
 	</div>
 	<center>
-		<a href="resume.pdf.pdf">
+		<a href="vishali123-convertedpdf">
 	<button>
 	<center>RESUME</center></button>
 </a>
